# Jetson

./: MULTI_PERSON_FIX.md  calibrate_direction.py  calibrate_headless.py  commands.txt  logs.txt
frs-cpp/: CMakeLists.txt  README.md
frs-cpp/config/: cameras.json  config.json
frs-cpp/include/: enroll_server.hpp  face_detector.hpp  face_embedder.hpp  gst_capture.hpp  http_client.hpp  runner.hpp  trt_engine.hpp
frs-cpp/scripts/: build_engines.sh  build_runner.sh  token_manager.sh
frs-cpp/src/: enroll_server.cpp  face_detector.cpp  face_embedder.cpp  gst_capture.cpp  http_client.cpp  main.cpp  main.cpp.backup_20260416_102421  main.cpp.bak  runner.cpp  token_manager.cpp  trt_engine.cpp
frs-cpp/tools/: direction_test.py
frs_deploy/: README.md
frs_deploy/configs/: token_manager.sh
frs_deploy/jetson/: J01_build_cpp_runner.sh  J02_test_connections.sh  J03_patch_enroll_server.sh
frs_deploy/vm/: bulk_enroll_employees.sh  fix_enrollment_routes.sh  fix_face_enrollment_ui.sh
